--- a/app/templates/heatmap.html
+++ b/app/templates/heatmap.html
@@ -20,7 +20,7 @@ body,
 {% endblock %}
 
 {% block content %}
-  <div id="container"></div>
+  <div id="container"  ng-controller="FormController"></div>
   <script src="https://cdn.anychart.com/releases/8.11.1/js/anychart-core.min.js"></script>
   <script src="https://cdn.anychart.com/releases/8.11.1/js/anychart-heatmap.min.js"></script>
   <script src="/static/js/heatmap.js"></script>
