--- a/app/templates/finalchoropleth.html
+++ b/app/templates/finalchoropleth.html
@@ -41,7 +41,19 @@
     </style>
 </head>
 <body>
-    <h2>Female Ratio in Healthy Life Expectancy than Male</h2>
+    <div id="title-container">
+        <h2>Female Ratio in Healthy Life Expectancy than Male</h2>
+        
+    </div>
+    <style>
+        #title-container {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start; 
+    padding-left: 50px; 
+}
+    </style>
+
     <div class="controls">
         <label for="yearSelector">Select Year: </label>
         <select id="yearSelector"></select>
