add beeswarm chart

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -56,6 +56,14 @@ body {
   padding: 20px;
 }
 
+.legend {
+  position: absolute;
+  top: 50px;
+  right: 50px;
+  background-color: rgba(255,255,255,0.7);
+  padding: 5px;
+  border-radius: 5px;
+}
 .accordion-btn {
   background-color: var(--dark-green);
   color: var(--white);
@@ -227,9 +235,15 @@ body {
 }
 
 /* Chart Styles */
-#chart {
-  margin: 20px;
+.chart {
+  width: 100%;
+  height: 600px; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: auto; /* Prevents clipping */
 }
+
 
 .tooltip {
   position: absolute;
@@ -505,7 +519,7 @@ body {
   padding-left: 2%;
   padding-top: 2%;
   width: 80%;
-  display: flex;
+  /* display: flex;   */
   justify-content: center;
   align-items: center;
 }
@@ -541,11 +555,11 @@ body {
 }
 
 .charts-container {
-  margin-left: 18%;
+  /* margin-left: 18%; */
   height: 100%;
   border: none;
-  margin-right: 10%;
-  overflow-x: hidden;
+  /* margin-right: 10%; */
+  overflow-x: auto;
 }
 
 .submit-button {
