--- a/app/templates/finalbox.html
+++ b/app/templates/finalbox.html
@@ -32,10 +32,27 @@
             font-size: 14px;
             display: none;
         }
+        .info-box {
+    background-color: #f0f0f0; /* Light gray background */
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    max-width: 800px; /* Adjust width */
+    text-align: justify; /* Justify the paragraph text */
+    margin: 20px auto; /* Center the frame horizontally */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
     </style>
 </head>
 <body>
     <h2>Average Life Expectancy at birth years by Region during 2000-2021</h2>
+    <div class="info-box">
+        <p>
+     
+        </p>
+      </div>
     <div class="tooltip" id="tooltip"></div>
     <svg width="800" height="500"></svg>
     <script src="/static/js/finalbox.js"></script>
