--- a/app/templates/finalstackedbar.html
+++ b/app/templates/finalstackedbar.html
@@ -15,10 +15,33 @@
     .axis-label {
       font-size: 14px;
     }
+    .info-box {
+    background-color: #f0f0f0; /* Light gray background */
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    max-width: 800px; /* Adjust width */
+    text-align: justify; /* Justify the paragraph text */
+    margin: 20px auto; /* Center the frame horizontally */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
   </style>
 </head>
 <body>
   <h1>Life Expectancy at Age 60 by Region (2000-2021)</h1>
+  <p>
+
+  </p>
+  <div class="inline-container">
+    
+    <div class="info-box">
+      <p>
+        This stacked bar chart represents average life expectancy at age 60 across different regions over time. The consistent height of the bars indicates that life expectancy beyond 60 has remained relatively stable, with variations among regions. Europe and the Americas have the highest life expectancy, while Africa shows the lowest. This visualization highlights longevity trends and aging populations in different global regions.
+      </p>
+    </div>
+  </div>
   <script src="/static/js/finalstackedbar.js"></script>
 </body>
 </html>
