--- a/app/templates/finalchoropleth.html
+++ b/app/templates/finalchoropleth.html
@@ -8,6 +8,19 @@
     <title>Sex Ratio in Life Expectancy</title>
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <style>
+        .info-box {
+    background-color: #f0f0f0; /* Light gray background */
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    max-width: 800px; /* Adjust width */
+    text-align: justify; /* Justify the paragraph text */
+    margin: 20px auto; /* Center the frame horizontally */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
         .map-container {
             width: 100%;
             height: 600px;
@@ -45,6 +58,14 @@
         <h2>Female Ratio in Healthy Life Expectancy than Male</h2>
         
     </div>
+    <div class="inline-container">
+        <div id="chart-one-year"></div>
+        <div class="info-box">
+          <p>
+        This map visualizes the ratio of female to male healthy life expectancy across different countries from 2000 to 2021. The color gradient represents how much longer or shorter females live in healthy conditions compared to males, with lighter shades indicating a more equal ratio and darker shades showing a larger gap in favor of females.  
+          </p>
+        </div>
+      </div>
     <style>
         #title-container {
     display: flex;
@@ -52,6 +73,7 @@
     justify-content: flex-start; 
     padding-left: 50px; 
 }
+    
     </style>
 
     <div class="controls">
