mel-para changes

--- a/app/templates/finalbox.html
+++ b/app/templates/finalbox.html
@@ -51,6 +51,7 @@
     <div class="info-box">
         <p>
      
+This box plot compares average life expectancy at birth across global regions from 2000 to 2021, showing significant differences in longevity. Africa has the lowest median, while Europe and the Western Pacific have the highest. The Americas, Eastern Mediterranean, and South-East Asia fall in between, showing gradual improvements over time.
         </p>
       </div>
     <div class="tooltip" id="tooltip"></div>
