--- a/app/templates/finalscatter.html
+++ b/app/templates/finalscatter.html
@@ -61,11 +61,29 @@
         button:hover:not(.active) {
             background-color: #f0f0f0;
         }
+        .info-box {
+    background-color: #f0f0f0; /* Light gray background */
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    max-width: 800px; /* Adjust width */
+    text-align: justify; /* Justify the paragraph text */
+    margin: 20px auto; /* Center the frame horizontally */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
     </style>
 </head>
 <body>
     <div class="year-buttons"></div>
     <div class="chart-container"></div>
+    <div class="info-box">
+        <p>
+            The interactive scatter plot visualizes the lowest life expectancy of males at birth from 2000 to 2021, showing trends across different countries. 
+            Over time, there is a gradual increase in life expectancy, though disparities remain.
+        </p>
+      </div>
 
  
     <script src="/static/js/finalscatter.js"></script>
