--- a/app/templates/finalchoropleth.html
+++ b/app/templates/finalchoropleth.html
@@ -51,6 +51,20 @@
             stroke: #999;
             stroke-dasharray: 4;
         }
+        .controls {
+    display: flex;
+    justify-content: center; /* Aligns the dropdown to the right */
+    margin-right: 50px; /* Adjust spacing as needed */
+    align-items: center;
+}
+
+.legend {
+    display: flex;
+    justify-content: flex -20 ; /* Aligns the legend to the right */
+    margin-right: 200px; /* Adjust spacing as needed */
+    align-items: center;
+}
+
     </style>
 </head>
 <body>
