flow plot done1

--- a/app/templates/final_flowplot_rom.html
+++ b/app/templates/final_flowplot_rom.html
@@ -12,6 +12,11 @@
     <title>HALE Flow Map</title>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <style>
+        p {
+            line-height: 3;
+        }
+    </style>
+    <style>
         body {
             display: flex;
             flex-direction: column;
