--- a/app/templates/finalchoropleth.html
+++ b/app/templates/finalchoropleth.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,41 +10,50 @@
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <style>
         .info-box {
-    background-color: #f0f0f0; /* Light gray background */
-    padding: 15px;
-    border-radius: 8px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
-    max-width: 800px; /* Adjust width */
-    text-align: justify; /* Justify the paragraph text */
-    margin: 20px auto; /* Center the frame horizontally */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+            background-color: #f0f0f0;
+            /* Light gray background */
+            padding: 15px;
+            border-radius: 8px;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+            max-width: 800px;
+            /* Adjust width */
+            text-align: justify;
+            /* Justify the paragraph text */
+            margin: 20px auto;
+            /* Center the frame horizontally */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
         .map-container {
             width: 100%;
             height: 600px;
         }
+
         .legend {
             font-size: 14px;
             display: flex;
             align-items: center;
             margin-top: 20px;
         }
+
         .legend rect {
             stroke: #ccc;
         }
+
         .legend-labels {
             display: flex;
             justify-content: space-between;
             width: 150px;
         }
+
         .no-data {
             display: flex;
             align-items: center;
             margin-right: 15px;
         }
+
         .no-data rect {
             width: 20px;
             height: 10px;
@@ -51,43 +61,50 @@
             stroke: #999;
             stroke-dasharray: 4;
         }
+
         .controls {
-    display: flex;
-    justify-content: center; /* Aligns the dropdown to the right */
-    margin-right: 50px; /* Adjust spacing as needed */
-    align-items: center;
-}
+            display: flex;
+            justify-content: center;
+            /* Aligns the dropdown to the right */
+            margin-right: 50px;
+            /* Adjust spacing as needed */
+            align-items: center;
+        }
 
-.legend {
-    display: flex;
-    justify-content: flex -20 ; /* Aligns the legend to the right */
-    margin-right: 200px; /* Adjust spacing as needed */
-    align-items: center;
-}
-
+        .legend {
+            display: flex;
+            justify-content: flex -20;
+            /* Aligns the legend to the right */
+            margin-right: 100px;
+            /* Adjust spacing as needed */
+            align-items: center;
+        }
     </style>
 </head>
+
 <body>
     <div id="title-container">
-        <h2>Female Ratio in Healthy Life Expectancy than Male</h2>
-        
+        <h2 style="margin: 0 auto; text-align: center;">Female Ratio in Healthy Life Expectancy than Male</h2>
+
     </div>
     <div class="inline-container">
         <div id="chart-one-year"></div>
         <div class="info-box">
-          <p>
-        This map visualizes the ratio of female to male healthy life expectancy across different countries from 2000 to 2021. The color gradient represents how much longer or shorter females live in healthy conditions compared to males, with lighter shades indicating a more equal ratio and darker shades showing a larger gap in favor of females.  
-          </p>
+            <p>
+                This map visualizes the ratio of female to male healthy life expectancy across different countries from
+                2000 to 2021. The color gradient represents how much longer or shorter females live in healthy
+                conditions compared to males, with lighter shades indicating a more equal ratio and darker shades
+                showing a larger gap in favor of females.
+            </p>
         </div>
-      </div>
+    </div>
     <style>
         #title-container {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start; 
-    padding-left: 50px; 
-}
-    
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            padding-left: 50px;
+        }
     </style>
 
     <div class="controls">
@@ -99,5 +116,6 @@
     <script src="/static/js/finalchoropleth.js"></script>
 
 </body>
+
 </html>
 {% endblock %}
