fix minor issues

--- a/app/templates/le_stacked.html
+++ b/app/templates/le_stacked.html
@@ -29,7 +29,9 @@
             </span>
         </button>
     </div>
-    <div id="stacked-area-plot"></div>
+    <div class="chart-wrapper">
+        <div id="stacked-area-plot"></div>
+    </div>
     <script src="/static/js/le_stacked.js"></script>
 </div>
 
